[package]
name = "rurl"
version = "0.1.0"
authors = ["Julian Lazaras <Lazaras_cat@cat.pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbr = "1.0"
hyper-rustls = "0.6"
argparse = "0.2.2"
[dependencies.hyper]
version = "0.10"
default-features = false

